# bevy-game

./: .gitignore  AGENTS.md  Agents.md  Cargo.toml  README.md  SUSPENSION_TUNING.md  build.sh  package-lock.json  package.json  sst-env.d.ts  sst.config.ts  tsconfig.json
.github/workflows/: main.yml
assets/: hud.ai  vehicle.ron
assets/models/: boulder.blend  car.glb  finish.blend  finish.glb  start.blend  start.glb  targets.blend  targets.glb  terrain.blend  terrain.glb
assets/shaders/: ripple.wgsl
examples/: vehicle_demo.rs
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  bevyGame.ts
frontend/src/composables/: useBevyGame.ts
frontend/src/wasm/: index.ts
socket/: index.ts
socket/models/: connection.ts
src/: camera.rs  chat.rs  components.rs  controls.rs  debug_ui.rs  globals.rs  goals.rs  hp_text.rs  hud.rs  input.rs  lap_timer.rs  lib.rs  main.rs  minimap.rs  multiplayer.rs  ripple.rs  setup_vehicle.rs  sky.rs  socket_client.rs  suspension.rs  systems.rs  targets.rs  vehicle.rs  vehicle_plugin.rs  vehicle_systems.rs  weapon_hud.rs  weapons.rs  world.rs
src/vehicle/: chassis.rs  controls.rs  mod.rs  suspension.rs  vehicle_plugin.rs  wheel.rs
tests/: player_interactions.rs  vehicle_suspension.rs  vehicle_test.rs
