[package]
name = "game_demo"
version = "0.1.0"
edition = "2021"

authors = ["Michael Bishop <michael@bishopand.com>"]
description = "Bevy"
license = "MIT"

[dependencies]
bevy = { version = "0.16.0-rc1" }
avian3d = { version = "0.3", features = ["debug-plugin", "bevy_scene"] }

# Optional physics / debug helpers (comment out until you need them)
# bevy_rapier3d = "0.25"        # 3D physics
# bevy-inspector-egui = "0.23"  # live ECS inspector

[profile.dev]
opt-level = 1              # a little faster without huge compile time
debug = true

[profile.release]
opt-level = "z"            # smaller binary; use 3 for max perf
lto = "thin"
